# dace-fortran

./: .fprettify.rc  .gitignore  .gitmodules  .pre-commit-config.yaml  ALLOC_BUFFER_SSA_DESIGN.md  AUTHORS  MANIFEST.in  README.md  codecov.yml  gen_lu_binding.py  pyproject.toml
.github/workflows/: format.yml  fortran-ci.yml
autotools/: dace_fortran.m4  dace_fortran.mk
cmake/: DaceFortran.cmake
dace_fortran/: .clang-tidy  CMakeLists.txt  README.md  __init__.py  build.py  build_bridge.py  codegen_check.py  emit_hlfir.py  external.py  external_functions.py  flang_codebase.py  fortran_parser.py  fparser_inliner.py  hlfir_to_sdfg.py  integer_power_exponents.py  preprocess.py  preprocess_cli.py
dace_fortran/bindings/: __init__.py  bind_c_shim.py  block_builders.py  build_fortran_library.py  emit_bindings.py  flatten_plan.py  fortran_interface.py  frozen_signature.py  loop_copy.py
dace_fortran/bridge/: bridge.cpp  extract_ast.cpp  extract_ast.h  extract_vars.cpp  extract_vars.h  trace_utils.cpp  trace_utils.h
dace_fortran/builder/: __init__.py  access.py  auto_dim_symbols.py  context.py  descriptors.py  emit_cfg.py  emit_library.py  emit_tasklet.py  enum_arg_symbols.py  prune_unused_arrays.py  scalar_shape_symbol_cleanup.py  statement_order.py
dace_fortran/data/: __init__.py  distributed.py
dace_fortran/inliner/: __init__.py  ast_utils.py
dace_fortran/intrinsics/: __init__.py  base.py  direct.py  elementwise.py  linalg.py  reduction.py
dace_fortran/libraries/: __init__.py
dace_fortran/passes/: DefaultIntent.cpp  DropStubCalls.cpp  EliminateDoubleBufferToggle.cpp  ExpandVectorSubscriptGather.cpp  ExpandVectorSubscriptScatter.cpp  FlattenStructs.cpp  FoldAssumedRankQueries.cpp  FoldCopyInOut.cpp  FoldElementAliases.cpp  InlineAll.cpp  LiftAllocArrayOfRecords.cpp  LiftAosPointerRecords.adjacent-patterns.md  LiftAosPointerRecords.cpp  LiftReductionOperands.cpp  LowerFirSelectCase.cpp  MarkBoundsRemapViews.cpp  MarshalExternalStructs.cpp  Passes.cpp  Passes.h  PreserveMutableGlobals.cpp  PropagateShapes.cpp  PruneNeverAllocatedMemberDeref.cpp  PruneUnreachable.cpp  RejectPolymorphism.cpp  RewritePointerAssigns.cpp  RewriteSequenceAssociation.cpp  StripCharacterRuntime.cpp  StripErrorHelpers.cpp  StripRuntimeIo.cpp  UnwrapEvalInMem.cpp  VerifyNoUnresolvedCalls.cpp  VersionShapeScalars.cpp  shallow_alias.h
docs/: CODEBASE_HELPERS.md  ICON_INTEGRATION.md  MERGE_HANDOFF_to_other_chat.md  external_call_policy.md  external_call_policy_plan.md  fparser_inliner_port_plan.md  icon_ocean_datastructure_assessment.md  icon_ocean_fparser_extraction_plan.md  qe_abi_and_review_fixes_plan.md
docs/bug_reports/: build_fortran_library_name_vs_sdfg_name_divergence.md  flatten_structs_scalar_read_of_allocatable_member.md
scripts/: build_icon_dace_libs.py  configure_icon_dace_cpu.sh
tasks/: audit_no_question_mark_in_elementals.md  audit_question_mark_emissions.md  qe_e2e_guide.md
tests/: _helpers.py  _prng.py  _util.py  advanced_optional_args_test.py  allocatable_realloc_test.py  allocatable_test.py  aor_cartesian_section_blockloop_test.py  array_attributes_test.py  array_of_records_test.py  array_return_assignment_test.py  array_section_test.py  array_test.py  array_to_loop_offset.py  array_value_as_symbol_test.py  array_wide_ops_test.py  assumed_rank_e2e_test.py  assumed_shape_lbound_loop_e2e_test.py  assumed_shape_shift_alias_offset_test.py  assumed_shape_test.py  audit_struct_field_traces_test.py  baseline_allocatable_test.py  baseline_arithmetic_test.py  baseline_conditionals_test.py  baseline_elemental_test.py  baseline_indirect_index_test.py  baseline_integer_kinds_test.py  baseline_intersub_call_test.py  baseline_intrinsic_min_test.py  baseline_logical_roundtrip_test.py  baseline_loops_test.py  baseline_pointer_assign_test.py  basic_test.py  bitwise_intrinsics_test.py  bool_int_arg_dtype_test.py  boolean_expression_subscript_audit_test.py  bound_intrinsics_test.py  break_return_test.py  build_bridge_test.py  buildast_unsupported_op_raises_test.py  call_extract_test.py  (+203 more)
tests/aos_pointer_records/: aos_allocatable_member_probe.f90  aos_assumed_shape_target_probe.f90  aos_runtime_index_probe.f90  aos_single_pointer_member_probe.f90  aos_two_pointer_members_probe.f90  aos_wp_kind_probe.f90  aos_write_through_pointer_probe.f90  test_aos_pointer_records_e2e.py  test_aos_pointer_records_matcher.py
tests/argminmax/: maxloc_dim_probe.f90  maxloc_whole_array_probe.f90  minloc_2d_whole_probe.f90  minloc_back_probe.f90  minloc_dim_probe.f90  minloc_whole_array_probe.f90  test_minloc_maxloc_frontend.py
tests/bindings/: aos_ndim_cartesian_test.py  auto_iface_test.py  bind_c_shim_test.py  cloudsc_flux_bindings_e2e_test.py  codegen_drift_test.py  deferred_member_presence_guard_test.py  emit_bindings_test.py  flatten_plan_roundtrip_test.py  flatten_plan_test.py  frozen_signature_drift_e2e_test.py  frozen_signature_test.py  icon_loopnest_bindings_e2e_test.py  logical_bindings_e2e_test.py  logical_io_bindings_e2e_test.py  loop_copy_test.py  module_global_aos_struct_test.py  module_origin_merge_test.py  multi_file_test.py  named_extent_symbol_test.py  numeric_io_bindings_e2e_test.py  optional_forward_present_e2e_test.py  pointer_arg_wrapper_decl_test.py  simple_and_flatten_bindings_e2e_test.py  struct_bindings_e2e_test.py  struct_member_symbol_source_test.py  struct_of_scalars_test.py  symbol_block_partition_test.py  weird_struct_bindings_e2e_test.py
tests/blas/: blas_extension_probes.f90  blas_probes.f90  test_blas_extension_frontend.py  test_blas_frontend_recognition.py  test_unsupported_libcall.py  unsupported_blas_probe.f90
tests/bounds_remap_view/: plain_slice_copy_probe.f90  pointer_plain_no_remap_probe.f90  pointer_view_bounds_remap_allocatable_probe.f90  pointer_view_bounds_remap_probe.f90  (+4 more)
tests/prebuilt_hlfir/: CMakeLists.txt  driver.f90  mod_jacobi.f90  mpi_stub.f90  test_prebuilt_hlfir.py
tests/prebuilt_hlfir/csr_spmv/: CMakeLists.txt  main.f90  mod_csr.f90
tests/prebuilt_hlfir/jacobi/: CMakeLists.txt  Makefile.am  configure.ac  mod_grid.f90  mod_io.f90  netcdf_stub.f90
(+258 files in other folders)
