[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dace-fortran"
version = "1.0.0"
description = "Fortran (HLFIR) frontend for the DaCe data-centric framework"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "ETH Zurich and the DaCe authors" }
]
requires-python = ">=3.10, <3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Compilers",
]
keywords = ["fortran", "flang", "hlfir", "mlir", "dace", "frontend", "dataflow"]

dependencies = [
    # Pinned to the FaCe branch: it carries the DaCe-core pieces the
    # frontend needs (``dace.sdfg.construction_utils``, the
    # Memset/Copy/Count library nodes, the post-cleaning passes).
    # Switch to ``@main`` once those land upstream.
    "dace @ git+https://github.com/spcl/dace.git@FaCe",
    # fparser AST single-TU inliner (dace_fortran.fparser_inliner).  >0.2
    # carries the Fortran2003-before-Fortran2008 import ordering needed
    # under Python 3.14 (cf. d-face commit 74110d690).
    "fparser > 0.2",
    "networkx",
    "numpy",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "coverage",
    "numpy",
    # numpy's f2py uses meson as its build backend on Python >= 3.12; the
    # numerical-reference builds skip without it (``meson not available``).
    "meson",
    "ninja",
]
linting = [
    "flake8",
    "pre-commit",
]
dev = [
    "dace-fortran[testing,linting]",
]

[project.urls]
Homepage = "https://github.com/spcl/dace-fortran"
Repository = "https://github.com/spcl/dace-fortran"
Documentation = "https://spcldace.readthedocs.io"
Issues = "https://github.com/spcl/dace-fortran/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dace_fortran*"]

[tool.setuptools.package-data]
dace_fortran = [
    "CMakeLists.txt",
    "build_bridge.py",
    "bridge/**/*.cpp",
    "bridge/**/*.h",
    "passes/**/*.cpp",
    "passes/**/*.h",
]

[tool.pytest.ini_options]
markers = [
    "long: Slow test (e.g. builds ICON from source). CI runs it (CI filters only '-m \"not mpi\"'); routine local full-sweeps exclude it with '-m \"not long\"'.",
    "sequential: Test must be run sequentially (select with '-m \"sequential\"')",
    "mpi: Multi-rank MPI test; excluded from the normal sweep, run under mpirun (select with '-m \"mpi\"')",
    "xdist_group: pytest-xdist load-group marker (ICON-build tests share one worker via --dist loadgroup)",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
# Don't recurse into the icon-model submodule -- its own scripts/
# carries an unrelated pytest tree that fails to collect outside
# its own dependency closure.
norecursedirs = ["icon-model", ".git", "*.egg-info", "build", ".dacecache*"]
addopts = "--color=yes"
